--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -175,8 +175,11 @@ color: white;
 #test {
     margin-left: 0;
     align-self: center;
+    position: relative;
 }
-
+.flip-card{
+  position: relative;
+}
 
 
   } 
