--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -1,185 +1,276 @@
-h1{
-    margin-top: 3px;
-    font-family: 'Fira Sans Condensed', sans-serif;
-  }
- .sign{
+h1 {
+  margin-top: 3px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+}
+
+.sign {
   font-family: 'Homemade Apple', cursive;
   text-align: right;
   margin-right: 100px;
   margin-top: 50px;
   color: black;
-  -ms-transform: rotate(-10deg); /* IE 9 */
+  -ms-transform: rotate(-10deg);
+  /* IE 9 */
   transform: rotate(-10deg);
- } 
-  #spacer{
-    margin:24px;
-  }
-.contactHead{
+}
+
+#spacer {
+  margin: 24px;
+}
+
+.contactHead {
   padding-left: 8px;
   padding-bottom: 1rem;
   padding-top: 2rem;
 }
 
 p {
-    margin: 10px;
-    font-size: 15px;
-    text-indent:10px;
-    color: black;
-    font-family: 'Fira Sans Condensed', sans-serif;
-  }
-
-  #boxy {
-      background-color:white;
-      padding: 2rem;
-      width: auto;
-  }
-  #boxz {
-      background-color: white;
-      margin-top: 50px;
-      padding-bottom: 20px;
-  }
-  h3 {
-      background-color:white;
-      color:#343a40;
-      margin-bottom: 15px;
-      margin-top: 15px;
-      margin-left: 15px;
-      font-family: 'Fira Sans Condensed', sans-serif;
-
-  }
-label, h4, h6 {
-    color: #343a40;
-    font-family: 'Fira Sans Condensed', sans-serif;
+  margin: 10px;
+  font-size: 15px;
+  text-indent: 10px;
+  color: black;
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
+
+#boxy {
+  background-color: white;
+  padding: 1rem;
+  width: auto;
+}
+
+#boxz {
+  background-color: white;
+  margin-top: 50px;
+  padding-bottom: 20px;
+}
+
+h3 {
+  background-color: white;
+  color: #343a40;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  margin-left: 15px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+
+}
+
+label,
+h4,
+h6 {
+  color: #343a40;
+  font-family: 'Fira Sans Condensed', sans-serif;
+}
+
 .flip-card {
-    background-color: transparent;
-    position: relative;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-    margin: 35px;
-  }
-
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
-  }
-  .flip-card-back {
-    background-color: #2980b9;
-    color: white;
-    transform: rotateY(180deg);
-  }
-  .flip-card-back button {
-    font-size: 14px;
-    font-family: 'Fira Sans Condensed', sans-serif; 
-    margin: 15px !important;
-    border: 1px solid; 
-    background-color:darkmagenta;
-    border-radius: 5px;
-    padding: 10px 15px;
-    color: white !important;
-    outline: none;
+  background-color: transparent;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  margin: 35px;
 }
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.flip-card-back button {
+  font-size: 14px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  margin: 15px !important;
+  border: 1px solid;
+  background-color: darkmagenta;
+  border-radius: 5px;
+  padding: 10px 15px;
+  color: white !important;
+  outline: none;
+}
+
 .flip-card-back button a {
-color: white;
+  color: white;
 }
 
 .flip-card-back button:hover {
-    font-weight: bold;
-    color: white;
+  font-weight: bold;
+  color: white;
+}
+
+.altCover {
+  background-color: rgb(218, 202, 180);
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 20px;
+  line-height: 150%;
+  text-align: center;
+  height: 100% !important;
+  background-size: cover !important;
+  background-repeat: repeat;
+}
+
+#resumeBox {
+  box-sizing: border-box;
+  display: block;
+}
+
+#grey {
+  font-size: 34px;
+  text-decoration: underline;
+  color: #343a40;
+}
+
+#contact-info {
+  line-height: 150%;
+}
+
+#bio-image {
+  width: 70%;
+}
+
+#thumb {
+  width: 70%;
+}
+
+#pink {
+  color: darkmagenta;
+  margin-right: 5px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 1050px) {
+  .column {
+    width: 50%;
   }
 
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 1000px) {
-    .column {
-      width: 50%;
-    }
-    .msg{
-      padding-top:0;
-    }
-   #or{
-      margin-left: 0;
-    }
- #erin1{
-      image-rendering: auto;
-      align-self: center;
-      margin-left: 0;
+  .msg {
+    padding-top: 0;
   }
-  .contactHead{
+
+  #or {
+    margin-left: 0;
+  }
+
+  #erin1 {
+    image-rendering: auto;
+    align-self: center;
+    margin-left: 0;
+  }
+
+  .contactHead {
     padding-left: 5px;
     padding-bottom: 0rem;
     padding-top: 5px;
   }
-  #spacer{
+
+  #spacer {
     margin: 0px;
   }
-  #boxz{
+
+  #boxz {
     margin-top: 0px;
   }
 
-  #test{
-      width: 100%;
-      margin-left: 0;
+  #test {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  #thumb {
+    margin-bottom: 30px;
+    margin-top: 5px;
+  }
+
+  .altCover {
+    width: 100%;
+    position: relative;
+    padding-right: 15px;
+    padding-left: 15px;
+    height: 100%;
+    background-repeat: repeat;
+
   }
 }
+
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-    .column {
-      width: 100%;
-    }
-    .msg{
-      padding-top:0px;
-    }
-    #or{
-      margin-left: 0;
-    }
-    #boxz{
-      margin-top: 0px;
-    }
-    .contactHead{
-      padding-left: 5px;
-      padding-bottom: 0rem;
-      padding-top: 5px;
-    }
-    #spacer{
-      margin: 0px;
-    }
+  .column {
+    width: 100%;
+  }
 
-  #erin1{
+  .msg {
+    padding-top: 0px;
+  }
+
+  #or {
+    margin-left: 0;
+  }
+
+  #boxz {
+    margin-top: 0px;
+  }
+
+  .contactHead {
+    padding-left: 5px;
+    padding-bottom: 0rem;
+    padding-top: 5px;
+  }
+
+  #spacer {
+    margin: 0px;
+  }
+
+  #erin1 {
     image-rendering: auto;
     align-self: center;
     margin-left: 0;
-}
-#test {
+  }
+
+  #test {
+    width: 100%;
     margin-left: 0;
-    align-self: center;
+  }
+
+  .flip-card {
     position: relative;
-}
-.flip-card{
-  position: relative;
-}
+  }
+
+  #thumb {
+    margin-bottom: 30px;
+    margin-top: 5px;
+  }
+
+  .altCover {
+    width: 100%;
+    height: 100%;
+  }
 
 
-  } 
+}
