--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-image: url('images/berry.jpg');
+  background-image: url('images/3.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
