--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -20,7 +20,9 @@
   margin-top: 3px;
 	margin-right: 25px;
   margin-bottom: 3px;
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
+
 
 
   /* Responsive layout - makes a two column-layout instead of four columns */
