--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,20 +15,20 @@
 }
 
 nav a {
-    color: darkmagenta;
+    color: rgb(113, 142, 172);
     font-size: 23px;
     font-family: 'Fira Sans Condensed', sans-serif;
     margin-right: 10px;
     justify-content: center;
 }
 .nav-link:hover {
-    background-color: darkmagenta;
+    background-color:rgb(113, 142, 172);
     color: #f5f5f5;
 }
 
 #tulip {
-     height: 40px;
-     width: 40px;
+     height: 42px;
+     width: 42px;
      margin-right:10px;
  }
 
@@ -47,7 +47,7 @@ nav a {
   .navbar-brand {
       width: 100%;
       margin: auto;
-      text-align: center;
+      text-align: left;
   }
 
   .navbar {
@@ -55,9 +55,15 @@ nav a {
       margin: 0;
       width: 100%;
   }
+  #tulip {
+    height: 35px;
+    width: 35px;
+    margin-right:10px;
+    margin-left: 0;
+}
 }
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .column {
       width: 100%;
     }
@@ -71,7 +77,7 @@ nav a {
   .navbar-brand {
       width: 100%;
       margin: auto;
-      text-align: center;
+      text-align: left;
   }
 
   .navbar {
@@ -79,6 +85,12 @@ nav a {
       margin: 0;
       width: 100%;
   }
+  #tulip {
+    height: 28px;
+    width: 28px;
+    margin-right:10px;
+    margin-left: 0;
+}
 
 
   } 
