--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -17,10 +17,9 @@ h1 {
   margin: 24px;
 }
 
-/* #erin1 {
-  margin-left: 140px;
-  align-items:center;
-  width: 70%;
+/* #erin1{
+  width: 80%;
+  margin-left: 40px;
 } */
 
 .contactHead {
@@ -41,14 +40,9 @@ p {
 
 #from {
   background-color: rgb(255, 255, 255);
-  padding-left:2rem;
-  /* padding-bottom: 1rem; */
-  padding-top: 2rem;
-  padding-right: 2rem;
+  padding: 2rem;
+  padding-bottom: 0;
   width: auto;
-  /* margin-left: 100px;
-  margin-right: 0;
-  align-items:center; */
 }
 
 #boxz {
@@ -59,15 +53,13 @@ p {
 
 h3 {
   background-color: white;
-  color: #343a40;
   padding-bottom: 8px;
   margin-left: 10px;
-  font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 label,
 h4,
-h6 {
+h6, h3 {
   color: #343a40;
   font-family: 'Fira Sans Condensed', sans-serif;
 }
@@ -120,7 +112,7 @@ h6 {
   font-family: 'Fira Sans Condensed', sans-serif;
   margin: 15px !important;
   border: 1px solid;
-  background-color: darkmagenta;
+  background-color: rgb(148, 60, 101);
   border-radius: 5px;
   padding: 10px 15px;
   color: white !important;
@@ -154,14 +146,24 @@ h6 {
   display: block;
 }
 
-#bio-image, #thumb{
-  width: 60%;
+#bio-image{
+  width: 69%;
+  margin-top: 75px;
+} 
+
+
+#thumb{
+  width: 70%;
   margin-top: 75px;
 }
 
 #pink {
   color: burlywood;
   margin-right: 5px;
+}
+
+#mail{
+  background-color:  rgb(148, 60, 101);
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
